Add column ordering to publisher
Publisher view has column ordering, saving and restore

--- a/src/Panama/View/Publisher/PublisherView.xaml
+++ b/src/Panama/View/Publisher/PublisherView.xaml
@@ -130,6 +130,8 @@
 
         <con:SplitterGrid.ContentLeft>
             <tk:DataGrid
+                CanUserReorderColumns="True"
+                HeaderMode="ColumnSelector"
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}" 
                 SelectedItem="{Binding SelectedItem}"
