Add minimum visible column

--- a/src/Panama/View/Title/TitleView.xaml
+++ b/src/Panama/View/Title/TitleView.xaml
@@ -130,6 +130,7 @@
             <tk:DataGrid
                 CanUserReorderColumns="True"
                 HeaderMode="ColumnSelector"
+                ColumnSelectorMinimumVisible="3"
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
