--- a/src/Panama/View/Publisher/PublisherView.xaml
+++ b/src/Panama/View/Publisher/PublisherView.xaml
@@ -132,6 +132,7 @@
             <tk:DataGrid
                 CanUserReorderColumns="True"
                 HeaderMode="ColumnSelector"
+                ColumnSelectorMinimumVisible="3"
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}" 
                 SelectedItem="{Binding SelectedItem}"
