Add column ordering self publisher
Self publisher view has column ordering, saving and restore

--- a/src/Panama/View/Publisher/SelfPublisherView.xaml
+++ b/src/Panama/View/Publisher/SelfPublisherView.xaml
@@ -33,7 +33,10 @@
         </con:SplitterGrid.HeaderRight>
 
         <con:SplitterGrid.ContentLeft>
-            <tk:DataGrid 
+            <tk:DataGrid
+                CanUserReorderColumns="True"
+                HeaderMode="ColumnSelector"
+                ColumnSelectorMinimumVisible="2"
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}" 
                 SelectedItem="{Binding SelectedItem}"
