Add column ordering to submission
Submission view has column ordering, saving and restore

--- a/src/Panama/View/Submission/SubmissionView.xaml
+++ b/src/Panama/View/Submission/SubmissionView.xaml
@@ -88,6 +88,9 @@
 
         <con:SplitterGrid.ContentLeft>
             <tk:DataGrid
+                CanUserReorderColumns="True"
+                HeaderMode="ColumnSelector"
+                ColumnSelectorMinimumVisible="3"                
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
