--- a/src/Panama/View/Title/TitleEditVersion.xaml
+++ b/src/Panama/View/Title/TitleEditVersion.xaml
@@ -1,4 +1,4 @@
-﻿<StackPanel
+﻿<Grid
     x:Class="Restless.Panama.View.TitleEditVersion"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,69 +8,60 @@
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
-    mc:Ignorable="d" 
+    mc:Ignorable="d"
+    tk:Property.RowHeights="*,2*"
     d:DesignHeight="650" d:DesignWidth="400">
-    <!-- Title edit 3 (versions) -->
-    <Grid>
+
+    <Grid tk:Property.ColumnWidths="Auto,*">
+        
         <tk:DataGrid
-            Style="{StaticResource DataGridEditLockedStyle}"
+            Grid.Column="1"
+            Style="{StaticResource DataGridLockedStyle}"
             ItemsSource="{Binding Versions.ListView}"
             SelectedItem="{Binding Versions.SelectedItem}"
             tk:DataGridColumns.Columns="{Binding Versions.Columns}" 
             ContextMenuOpeningCommand="{Binding Versions.Commands[ContextMenuOpening]}">
+            
             <DataGrid.ContextMenu>
                 <ContextMenu ItemsSource="{Binding Versions.MenuItems}"  />
             </DataGrid.ContextMenu>
+            
             <DataGrid.InputBindings>
                 <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding Versions.OpenRowCommand}"/>
             </DataGrid.InputBindings>
+            
         </tk:DataGrid>
+        
         <TextBlock
+            Grid.Column="1"
             Style="{StaticResource TextBlockZeroResultStyle}"
             tk:Property.IsCollapsed="{Binding Versions.HaveVersion}"
             Text="{x:Static r:Strings.TextNoTitleVersions}"/>
+        
+        <StackPanel Margin="0,30,0,0">
+            <StackPanel.Resources>
+                <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}">
+                    <Setter Property="Margin" Value="6,2"/>
+                </Style>
+            </StackPanel.Resources>
+            
+            <Button
+                Content="{StaticResource ArrowUpIconKey}"
+                Command="{Binding Versions.Commands[VersionMoveUp]}"/>
+
+            <Button
+                Content="{StaticResource ArrowDownIconKey}"
+                Command="{Binding Versions.Commands[VersionMoveDown]}"/>
+            
+            <Button
+                Content="{StaticResource SubmissionIconKey}"
+                Command="{Binding Versions.Commands[VersionSync]}"
+                ToolTip="{x:Static r:Strings.ToolTipSynchonizeTitles}"/>
+        </StackPanel>
     </Grid>
-    <!-- Action buttons for version -->
-    <StatusBar>
-        <StatusBar.Resources>
-            <Style TargetType="tk:IconButton" BasedOn="{StaticResource SmallIconButtonStyle}"/>
-        </StatusBar.Resources>
-        <tk:IconButton 
-            Padding="0"
-            Icon="{StaticResource ArrowUpMediumIconKey}"
-            Command="{Binding Versions.Commands[VersionMoveUp]}"/>
-        
-        <tk:IconButton
-            Padding="0"
-            Icon="{StaticResource ArrowDownMediumIconKey}"
-            Command="{Binding Versions.Commands[VersionMoveDown]}"/>
-        
-        <Separator/>
-        
-        <tk:IconButton
-            Content="File"
-            Icon="{StaticResource SquareSmallGreenIconKey}"
-            Command="{Binding Versions.Commands[VersionAddByFile]}"/>
-        
-        <tk:IconButton
-            Content="Replace"
-            Icon="{StaticResource SquareSmallGrayIconKey}"
-            Command="{Binding Versions.Commands[VersionReplace]}"/>
-        
-        <tk:IconButton
-            Content="Remove"
-            Icon="{StaticResource XSmallRedIconKey}"
-            Command="{Binding Versions.Commands[VersionRemove]}"/>
-        
-        <Separator/>
-        
-        <tk:IconButton
-            Content="Sync"
-            Icon="{StaticResource SquareSmallBlueIconKey}"
-            Command="{Binding Versions.Commands[VersionSync]}"/>
-    </StatusBar>
-    
-    <StackPanel 
+   
+    <StackPanel
+        Grid.Row="1"
         Style="{StaticResource DataEntryPanelStyle}"
         tk:Property.IsNullCollapsed="{Binding Versions.SelectedVersion}">
         <TextBlock Text="Note"/>
@@ -143,4 +134,4 @@
 
 
     </StackPanel>
-</StackPanel>
+</Grid>
