--- a/src/Panama/View/Title/TitleEditVersion.xaml
+++ b/src/Panama/View/Title/TitleEditVersion.xaml
@@ -38,12 +38,7 @@
             tk:Property.IsCollapsed="{Binding Versions.HaveVersion}"
             Text="{x:Static r:Strings.TextNoTitleVersions}"/>
         
-        <StackPanel Margin="0,30,0,0">
-            <StackPanel.Resources>
-                <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}">
-                    <Setter Property="Margin" Value="6,2"/>
-                </Style>
-            </StackPanel.Resources>
+        <StackPanel Style="{StaticResource SidePanelStyle}">
             
             <Button
                 Content="{StaticResource ArrowUpIconKey}"
@@ -57,6 +52,7 @@
                 Content="{StaticResource SubmissionIconKey}"
                 Command="{Binding Versions.Commands[VersionSync]}"
                 ToolTip="{x:Static r:Strings.ToolTipSynchonizeTitles}"/>
+
         </StackPanel>
     </Grid>
    
