--- a/src/Panama/Resources/Dictionary/Panel.xaml
+++ b/src/Panama/Resources/Dictionary/Panel.xaml
@@ -42,6 +42,15 @@
         </Style.Resources>
     </Style>
 
+    <Style x:Key="SidePanelStyle" TargetType="Panel">
+        <Setter Property="Margin" Value="0,30,0,0"/>
+        <Style.Resources>
+            <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}">
+                <Setter Property="Margin" Value="4,2"/>
+            </Style>
+        </Style.Resources>
+    </Style>
+
     <Style x:Key="VerticalGridSplitterStyle" TargetType="GridSplitter">
         <Setter Property="Margin" Value="0,4"/>
         <Setter Property="Width" Value="2"/>
