--- a/src/Panama/View/Submission/SubmissionEditContainer.xaml
+++ b/src/Panama/View/Submission/SubmissionEditContainer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Grid
     x:Class="Restless.Panama.View.SubmissionEditContainer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,46 +9,45 @@
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel"
     xmlns:vw="clr-namespace:Restless.Panama.View"
     d:DataContext="{d:DesignInstance Type=vm:SubmissionViewModel}"
-    mc:Ignorable="d" 
+    mc:Ignorable="d"
+    tk:Property.RowHeights="Auto,*"
     d:DesignHeight="1000" d:DesignWidth="300">
-    <DockPanel>
-        <tk:RadioButtonPanel
-            DockPanel.Dock="Top"
-            Margin="0,0,0,8"
-            tk:Property.ColumnWidths="Auto,Auto,Auto,Auto,Auto"
-            SelectedValue="{Binding SelectedEditSection}">
 
-            <tk:RadioButton Grid.Column="0" Value="1" Content="{x:Static r:Strings.HeaderMain}"/>
-            <tk:RadioButton Grid.Column="1" Value="2" Content="{x:Static r:Strings.HeaderDates}"/>
-            <tk:RadioButton Grid.Column="2" Value="3" Content="{x:Static r:Strings.HeaderTitles}"/>
-            <tk:RadioButton Grid.Column="3" Value="4" Content="{x:Static r:Strings.HeaderDocuments}"/>
-            <tk:RadioButton Grid.Column="4" Value="5" Content="{x:Static r:Strings.HeaderMessages}"/>
-        </tk:RadioButtonPanel>
+    <tk:RadioButtonPanel
+        Margin="0,0,0,8"
+        tk:Property.ColumnWidths="Auto,Auto,Auto,Auto,Auto"
+        SelectedValue="{Binding SelectedEditSection}">
 
-        <vw:SubmissionEditMain
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="1"/>
+        <tk:RadioButton Grid.Column="0" Value="1" Content="{x:Static r:Strings.HeaderMain}"/>
+        <tk:RadioButton Grid.Column="1" Value="2" Content="{x:Static r:Strings.HeaderDates}"/>
+        <tk:RadioButton Grid.Column="2" Value="3" Content="{x:Static r:Strings.HeaderTitles}"/>
+        <tk:RadioButton Grid.Column="3" Value="4" Content="{x:Static r:Strings.HeaderDocuments}"/>
+        <tk:RadioButton Grid.Column="4" Value="5" Content="{x:Static r:Strings.HeaderMessages}"/>
+    </tk:RadioButtonPanel>
+
+    <vw:SubmissionEditMain
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="1"/>
         
-        <vw:SubmissionEditDate
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="2"/>
+    <vw:SubmissionEditDate
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="2"/>
 
-        <vw:SubmissionEditTitle
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="3"/>
+    <vw:SubmissionEditTitle
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="3"/>
         
-        <vw:SubmissionEditDocument
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="4"/>
+    <vw:SubmissionEditDocument
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="4"/>
 
-        <vw:SubmissionEditMessage
-            DockPanel.Dock="Top"
-            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
-            tk:Property.IsLongVisibleValue="5"/>
+    <vw:SubmissionEditMessage
+        Grid.Row="1"
+        tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+        tk:Property.IsLongVisibleValue="5"/>
 
-    </DockPanel>
-</UserControl>
+</Grid>
