--- a/src/Panama/View/Title/TitleView.xaml
+++ b/src/Panama/View/Title/TitleView.xaml
@@ -129,8 +129,7 @@
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
                 RestoreStateBehavior="RestoreLastSelection"
-                tk:DataGridColumns.Columns="{Binding Columns}"
-                RowStyle="{StaticResource TitleDataGridRowStyle}">
+                tk:DataGridColumns.Columns="{Binding Columns}">
 
                 <DataGrid.InputBindings>
                     <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenRowCommand}"/>
