Update flags display, publisher

--- a/src/Panama/View/Publisher/PublisherView.xaml
+++ b/src/Panama/View/Publisher/PublisherView.xaml
@@ -131,8 +131,7 @@
                 ItemsSource="{Binding ListView}" 
                 SelectedItem="{Binding SelectedItem}"
                 RestoreStateBehavior="RestoreLastSelection"
-                tk:DataGridColumns.Columns="{Binding Columns}"
-                RowStyle="{StaticResource PublisherDataGridRowStyle}">
+                tk:DataGridColumns.Columns="{Binding Columns}">
 
                 <DataGrid.InputBindings>
                     <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenRowCommand}"/>
