--- a/src/Panama/View/Tool/SettingsWindow.xaml
+++ b/src/Panama/View/Tool/SettingsWindow.xaml
@@ -100,40 +100,86 @@
                 tk:Property.IsLongVisibleValue="3">
 
                 <Grid 
-                    tk:Property.ColumnWidths="Auto,*,*"
-                    tk:Property.RowHeights="Auto,Auto,Auto,Auto,Auto,Auto,Auto,*">
+                    tk:Property.ColumnWidths="Auto,*"
+                    tk:Property.RowHeights="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,*">
                     <Grid.Resources>
                         <Style TargetType="con:SimpleColorPicker">
-                            <Setter Property="Margin" Value="0,3"/>
+                            <Setter Property="Margin" Value="0,2"/>
                         </Style>
                     </Grid.Resources>
 
-                    <TextBlock Grid.Column="1" HorizontalAlignment="Center" Text="Foreground"/>
-                    <TextBlock Grid.Column="2" HorizontalAlignment="Center" Text="Background"/>
-                    
-                    <TextBlock Grid.Row="1" Text="Published"/>
-                    <TextBlock Grid.Row="2" Text="Self published"/>
-                    <TextBlock Grid.Row="3" Text="Submitted"/>
-                    <TextBlock Grid.Row="4" Text="Period"/>
-                    <TextBlock Grid.Row="5" Text="Goner"/>
-                    
-                    <con:SimpleColorPicker Grid.Row="1" Grid.Column="1" SelectedColor="{Binding Config.Colors.TitlePublished.Foreground}"/>
-                    <con:SimpleColorPicker Grid.Row="1" Grid.Column="2" SelectedColor="{Binding Config.Colors.TitlePublished.Background}"/>
-                    
-                    <con:SimpleColorPicker Grid.Row="2" Grid.Column="1" SelectedColor="{Binding Config.Colors.TitleSelfPublished.Foreground}"/>
-                    <con:SimpleColorPicker Grid.Row="2" Grid.Column="2" SelectedColor="{Binding Config.Colors.TitleSelfPublished.Background}"/>  
-                    
-                    <con:SimpleColorPicker Grid.Row="3" Grid.Column="1" SelectedColor="{Binding Config.Colors.TitleSubmitted.Foreground}"/>
-                    <con:SimpleColorPicker Grid.Row="3" Grid.Column="2" SelectedColor="{Binding Config.Colors.TitleSubmitted.Background}"/>
-                    
-                    <con:SimpleColorPicker Grid.Row="4" Grid.Column="1" SelectedColor="{Binding Config.Colors.PublisherPeriod.Foreground}"/>
-                    <con:SimpleColorPicker Grid.Row="4" Grid.Column="2" SelectedColor="{Binding Config.Colors.PublisherPeriod.Background}"/>
+                    <TextBlock Grid.Column="1" HorizontalAlignment="Center" Text="Color"/>
 
-                    <con:SimpleColorPicker Grid.Row="5" Grid.Column="1" SelectedColor="{Binding Config.Colors.PublisherGoner.Foreground}"/>
-                    <con:SimpleColorPicker Grid.Row="5" Grid.Column="2" SelectedColor="{Binding Config.Colors.PublisherGoner.Background}"/>
+                    <TextBlock Grid.Row="1" Text="Title Ready"/>
+                    <TextBlock Grid.Row="2" Text="Title Flagged"/>
+                    <TextBlock Grid.Row="3" Text="Title Published"/>
+                    <TextBlock Grid.Row="4" Text="Title Self Published"/>
+                    <TextBlock Grid.Row="5" Text="Title Submitted"/>
+
+                    <TextBlock Grid.Row="6" Text="Publisher Exclusive"/>
+                    <TextBlock Grid.Row="7" Text="Publisher Paying"/>
+                    <TextBlock Grid.Row="8" Text="Publisher Goner"/>
+                    <TextBlock Grid.Row="9" Text="Publisher Active"/>
+                    <TextBlock Grid.Row="10" Text="Publisher Period"/>
                     
+                    <TextBlock Grid.Row="11" Text="Submission Online"/>
+                    <TextBlock Grid.Row="12" Text="Submission Contest"/>
+                    <TextBlock Grid.Row="13" Text="Submission Locked"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="1" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.TitleReady.Color}"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="2" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.TitleFlagged.Color}"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="3" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.TitlePublished.Color}"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="4" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.TitleSelfPublished.Color}"/>
+
+                    <con:SimpleColorPicker
+                        Grid.Row="5" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.TitleSubmitted.Color}"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="6" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.PublisherExclusive.Color}"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="7" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.PublisherPaying.Color}"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="8" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.PublisherGoner.Color}"/>
+
+                    <con:SimpleColorPicker
+                        Grid.Row="9" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.PublisherActiveSubmission.Color}"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="10" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.PublisherPeriod.Color}"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="11" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.SubmissionOnline.Color}"/>
+
+                    <con:SimpleColorPicker
+                        Grid.Row="12" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.SubmissionContest.Color}"/>
+                    
+                    <con:SimpleColorPicker
+                        Grid.Row="13" Grid.Column="1"
+                        SelectedColor="{Binding Config.Colors.SubmissionLocked.Color}"/>
+
                     <tk:IconButton
-                        Grid.Row="6"
+                        Grid.Row="14"
                         Margin="0,8"
                         HorizontalAlignment="Left"
                         Icon="{StaticResource SquareSmallRedIconKey}"
@@ -141,42 +187,6 @@
                         ToolTip="Reset all colors to their default values. No confirmation."
                         Command="{Binding Commands[ResetColors]}"/>
 
-                    <!-- Display sample colors for titles and publications -->
-                    <Grid
-                        Grid.Row="7" Grid.ColumnSpan="3"
-                        tk:Property.RowHeights="Auto,*,Auto,*">
-
-                        <Grid.Resources>
-                            <Style TargetType="DataGrid" BasedOn="{StaticResource DataGridEditLockedStyle}"/>
-                        </Grid.Resources>
-                        
-                        <!-- Titles sample -->
-                        <TextBlock Text="Titles"/>
-                        <DataGrid
-                            Grid.Row="1"
-                            RowStyle="{StaticResource TitleDataGridRowStyle}"
-                            ItemsSource="{Binding SampleTitles}">
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Header="Id" Binding="{Binding Id}" Width="42"/>
-                                <DataGridTextColumn Header="Title" Binding="{Binding Title}" Width="4*"/>
-                                <DataGridTextColumn Header="Written" Binding="{Binding Written}" Width="100"/>
-                            </DataGrid.Columns>
-                        </DataGrid>
-
-                        <!-- Publications sample -->
-                        <TextBlock Grid.Row="2" Text="Publishers"/>
-                        <DataGrid
-                            Grid.Row="3"
-                            RowStyle="{StaticResource PublisherDataGridRowStyle}"
-                            ItemsSource="{Binding SamplePublishers}">
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Header="Id" Binding="{Binding Id}" Width="42"/>
-                                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*"/>
-                                <DataGridTextColumn Header="Added" Binding="{Binding Added}" Width="100"/>
-                                <DataGridTextColumn Header="Last Sub" Binding="{Binding LastSub}" Width="100"/>
-                            </DataGrid.Columns>
-                        </DataGrid>
-                    </Grid>
                 </Grid>
             </HeaderedContentControl>
             
