--- a/src/Panama/Resources/Dictionary/ToolTip.xaml
+++ b/src/Panama/Resources/Dictionary/ToolTip.xaml
@@ -24,40 +24,20 @@
 
     <Style TargetType="ToolTip" BasedOn="{StaticResource DefaultToolTipStyle}"/>
 
-    <Grid
-        x:Key="SubmissionTitleStatusToolTip"
-        Margin="6,4,6,0"
-        tk:Property.ColumnWidths="Auto,*"
-        tk:Property.RowHeights="Auto,Auto,Auto">
+    <Style x:Key="ToolTipBorderIconStyle" TargetType="Border">
+        <Setter Property="Margin" Value="6,3"/>
+        <Setter Property="Height" Value="12"/>
+        <Setter Property="Width" Value="12"/>
+    </Style>
+    
+    <Style x:Key="ToolTipTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="Margin" Value="6,0"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkForegroundBrush}"/>
+    </Style>
 
-        <Grid.Resources>
-            <Style TargetType="TextBlock">
-                <Setter Property="Margin" Value="2,0"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-            </Style>
-            <Style TargetType="Path" BasedOn="{StaticResource MediumPathStyle}">
-                <Setter Property="Margin" Value="8"/>
-                <Setter Property="Height" Value="13"/>
-                <Setter Property="Width" Value="13"/>
-            </Style>
-        </Grid.Resources>
-
-        <TextBlock
-            Grid.ColumnSpan="2"
-            Text="Submission status of title"/>
-
-        <Path
-            Grid.Row="1"
-            Fill="{StaticResource GrayIconBrush}"
-            Data="{StaticResource SquareGeometryKey}"/>
-
-        <Path
-            Grid.Row="2"
-            Fill="{StaticResource GreenIconBrush}"
-            Data="{StaticResource SquareGeometryKey}"/>
-
-        <TextBlock Grid.Row="1" Grid.Column="1" Text="Withdrawn"/>
-        <TextBlock Grid.Row="2" Grid.Column="1" Text="Accepted"/>
-    </Grid>
+    <Style x:Key="ToolTipTextBlockHeaderStyle" TargetType="TextBlock" BasedOn="{StaticResource ToolTipTextBlockStyle}">
+        <Setter Property="Margin" Value="0,0,6,4"/>
+    </Style>
 
 </ResourceDictionary>
