--- a/src/Panama/View/Submission/SubmissionEditTitle.xaml
+++ b/src/Panama/View/Submission/SubmissionEditTitle.xaml
@@ -13,7 +13,7 @@
     tk:Property.ColumnWidths="Auto,*"
     d:DesignHeight="650" d:DesignWidth="400">
     
-    <DataGrid
+    <tk:DataGrid
         Grid.Column="1"
         Style="{StaticResource DataGridLockedStyle}"
         ItemsSource="{Binding Titles.ListView}"
@@ -28,7 +28,7 @@
             <ContextMenu ItemsSource="{Binding Titles.MenuItems}"/>
         </DataGrid.ContextMenu>
 
-    </DataGrid>
+    </tk:DataGrid>
 
     <StackPanel Style="{StaticResource SidePanelStyle}">
 
