--- a/src/Panama/View/Publisher/PublisherFlagsToolTip.xaml
+++ b/src/Panama/View/Publisher/PublisherFlagsToolTip.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" 
-    d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
+    d:DataContext="{d:DesignInstance Type=vm:PublisherViewModel}"
     mc:Ignorable="d" 
     tk:Property.ColumnWidths="Auto,*"
     tk:Property.RowHeights="Auto,Auto,Auto,Auto,Auto,Auto"
