--- a/src/Panama/View/MainWindow.xaml
+++ b/src/Panama/View/MainWindow.xaml
@@ -53,6 +53,10 @@
                     Icon="{StaticResource ToolIconKey}"
                     Command="{Binding Commands[OpenToolWindow]}"/>
 
+                <MenuItem
+                    Header="{x:Static r:Strings.MenuItemLinkVerify}"
+                    Icon="{StaticResource LinkIconKey}"
+                    Command="{Binding Commands[NavigateLinkVerify]}"/>
                 <Separator/>
                 
                 <MenuItem
