Config option for link verification
The config option provides a way of hiding the link verification functionality, an experimental feature

--- a/src/Panama/View/MainWindow.xaml
+++ b/src/Panama/View/MainWindow.xaml
@@ -56,9 +56,11 @@
                 <MenuItem
                     Header="{x:Static r:Strings.MenuItemLinkVerify}"
                     Icon="{StaticResource LinkIconKey}"
-                    Command="{Binding Commands[NavigateLinkVerify]}"/>
+                    Command="{Binding Commands[NavigateLinkVerify]}"
+                    tk:Property.IsVisible="{Binding Config.IsVerifyLinkEnabled}"/>
+
                 <Separator/>
-                
+
                 <MenuItem
                     Header="{x:Static r:Strings.MenuItemTableInfo}"
                     Icon="{StaticResource TableIconKey}"
