--- a/src/Panama/View/Tool/SettingsWindow.xaml
+++ b/src/Panama/View/Tool/SettingsWindow.xaml
@@ -214,63 +214,6 @@
                         </Grid>
                     </Expander>
 
-                    <!--<TextBlock Grid.Column="1" HorizontalAlignment="Center" Text="Color"/>
-                    <TextBlock Grid.Column="3" HorizontalAlignment="Center" Text="Color"/>
-
-                    <TextBlock Grid.Row="1" Text="Title"/>
-
-                    <TextBlock Grid.Row="2" Text="Ready"/>
-                    <TextBlock Grid.Row="2" Grid.Column="2" Text="Flagged"/>
-                    
-                    <TextBlock Grid.Row="3" Text="Published"/>
-                    <TextBlock Grid.Row="3" Grid.Column="2" Text="Self Published"/>
-                    <TextBlock Grid.Row="4" Text="Submitted"/>
-
-                    <TextBlock Grid.Row="6" Text="Publisher Exclusive"/>
-                    <TextBlock Grid.Row="7" Text="Publisher Paying"/>
-                    <TextBlock Grid.Row="8" Text="Publisher Goner"/>
-                    <TextBlock Grid.Row="9" Text="Publisher Active"/>
-                    <TextBlock Grid.Row="10" Text="Publisher Period"/>
-                    
-                    <TextBlock Grid.Row="11" Text="Submission Online"/>
-                    <TextBlock Grid.Row="12" Text="Submission Contest"/>
-                    <TextBlock Grid.Row="13" Text="Submission Locked"/>-->
-                    
-                    <!--
-                    
-                    
-                    <con:SimpleColorPicker
-                        Grid.Row="6" Grid.Column="1"
-                        SelectedColor="{Binding Config.Colors.PublisherExclusive.Color}"/>
-                    
-                    <con:SimpleColorPicker
-                        Grid.Row="7" Grid.Column="1"
-                        SelectedColor="{Binding Config.Colors.PublisherPaying.Color}"/>
-                    
-                    <con:SimpleColorPicker
-                        Grid.Row="8" Grid.Column="1"
-                        SelectedColor="{Binding Config.Colors.PublisherGoner.Color}"/>
-
-                    <con:SimpleColorPicker
-                        Grid.Row="9" Grid.Column="1"
-                        SelectedColor="{Binding Config.Colors.PublisherActiveSubmission.Color}"/>
-                    
-                    <con:SimpleColorPicker
-                        Grid.Row="10" Grid.Column="1"
-                        SelectedColor="{Binding Config.Colors.PublisherPeriod.Color}"/>
-                    
-                    <con:SimpleColorPicker
-                        Grid.Row="11" Grid.Column="1"
-                        SelectedColor="{Binding Config.Colors.SubmissionOnline.Color}"/>
-
-                    <con:SimpleColorPicker
-                        Grid.Row="12" Grid.Column="1"
-                        SelectedColor="{Binding Config.Colors.SubmissionContest.Color}"/>
-                    
-                    <con:SimpleColorPicker
-                        Grid.Row="13" Grid.Column="1"
-                        SelectedColor="{Binding Config.Colors.SubmissionLocked.Color}"/>-->
-
                     <tk:IconButton
                         Grid.Row="14"
                         Margin="0,8"
@@ -346,14 +289,20 @@
 
                     <TextBlock Text="{x:Static r:Strings.SettingsOrphanFileExclusion}"/>
                     <TextBox Text="{Binding Config.OrphanFileExclusions}"/>
-
+                   
                     <con:PathSelector 
                         Title="{x:Static r:Strings.SettingsDatabaseLocation}"
                         Path="{Binding DatabaseLocation}"
                         SelectCommand="{Binding Commands[SelectPath]}"/>
 
                     <TextBlock Text="{x:Static r:Strings.SettingsDatabaseLocationText}"/>
-                    
+
+                    <Separator Margin="0,12"/>
+
+                    <CheckBox
+                        Content="{x:Static r:Strings.SettingsVerifyLinks}"
+                        IsChecked="{Binding Config.IsVerifyLinkEnabled}"/>
+
                 </StackPanel>
             </HeaderedContentControl>
             
