--- a/src/Panama/App.xaml
+++ b/src/Panama/App.xaml
@@ -26,6 +26,7 @@
                 <ResourceDictionary Source="Resources/Dictionary/Images.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionary/ToolTip.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionary/ScrollBar.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/Slider.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionary/DataTemplate.xaml"/>
                 <!--
                 <ResourceDictionary Source="Resources/Dictionary/Converters.xaml"/>
