--- a/src/Panama/View/Title/TitleView.xaml
+++ b/src/Panama/View/Title/TitleView.xaml
@@ -12,6 +12,7 @@
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="355">
+    
     <con:SplitterGrid
         MinDetailWidth="{x:Static core:Config+Grid.MinTitleDetailWidth}"
         MaxDetailWidth="{x:Static core:Config+Grid.MaxTitleDetailWidth}"
@@ -67,48 +68,15 @@
                     tk:Property.IsVisible="{Binding Filters.IsAnyFilterActive}"
                     Foreground="{StaticResource DarkAlertForegroundBrush}"
                     Text="(row filter in effect)"/>
-                <!-- Advanced filter -->
-                <Popup
+
+                <vw:TitleCustomFilter
                     Placement="Bottom"
                     PlacementTarget="{Binding ElementName=CustomFilterButton}"
                     VerticalOffset="6"
                     HorizontalOffset="6"
                     IsOpen="{Binding IsCustomFilterOpen}"
-                    StaysOpen="True">
-                    <Border 
-                        Style="{StaticResource BorderEditContainerStyle}"
-                        BorderThickness="2"
-                        BorderBrush="{StaticResource DefaultBorderBrush}"
-                        Background="{StaticResource DefaultBackgroundBrush}">
-
-                        <Grid 
-                            tk:Property.ColumnWidths="*,*"
-                            tk:Property.RowHeights="Auto,*"
-                            Style="{StaticResource DataEntryPanelStyle}">
-
-                            <StackPanel Grid.ColumnSpan="2">
-                                <TextBlock Text="{x:Static r:Strings.TextTitle}"/>
-                                <TextBox
-                                    Text="{Binding Filters.Text, 
-                                    UpdateSourceTrigger=PropertyChanged,
-                                    Delay=500}"/>
-                            </StackPanel>
-
-                            <StackPanel Grid.Row="1">
-                                <tk:ThreeWay Header="{x:Static r:Strings.TextReady}" State="{Binding Filters.ReadyState}"/>
-                                <tk:ThreeWay Header="{x:Static r:Strings.TextFlagged}" State="{Binding Filters.FlaggedState}"/>
-                                <tk:ThreeWay Header="{x:Static r:Strings.TextPublished}" State="{Binding Filters.PublishedState}"/>
-                            </StackPanel>
-
-                            <StackPanel Grid.Row="1" Grid.Column="1">
-                                <tk:ThreeWay Header="{x:Static r:Strings.TextSubmitted}" State="{Binding Filters.CurrentlySubmittedState}"/>
-                                <tk:ThreeWay Header="{x:Static r:Strings.TextEverSubmitted}" State="{Binding Filters.EverSubmittedState}"/>
-                                <tk:ThreeWay Header="{x:Static r:Strings.TextSelfPublished}" State="{Binding Filters.SelfPublishedState}"/>
-                            </StackPanel>
-
-                        </Grid>
-                    </Border>
-                </Popup>
+                    StaysOpen="False" />
+                
             </StatusBar>
         </con:SplitterGrid.HeaderLeft>
 
